syntax = "proto3";

package types;

//以太坊账户信息
// 	 privkey : 账户地址对应的私钥
//	 addr :账户地址
message Account4Relayer {
    bytes privkey    = 1;
    string addr      = 2;
}

message ValidatorAddr4EthRelayer {
    string ethValidator      = 1;
    string chain33Validator  = 2;
}

message Txhashes {
    repeated string txhash = 1;
}

message ReqWalletSetPasswd {
    string oldPassphase = 1;
    string newPassphase = 2;
}

message Account4Show {
    string privkey    = 1;
    string addr      = 2;
}

message assetType {
    string chain         = 1;
    string issueContract = 2;
    string symbol        = 3;
}

message EthBridgeClaim {
    int32 ethereumChainID = 1;
    bytes bridgeContractAddress = 2;
    int64 nonce = 3;
    bytes tokenContractAddress = 4;
    string symbol        = 5;
    bytes ethereumSender = 6;
    bytes chain33Receiver = 7;
    bytes ValidatorAddress = 8;
    int64 amount = 9;
    int32 claimType = 10;
    string chainName = 11;
}